weird layout issue with long level names, see #1331

--- a/scss/components/_results-framework.scss
+++ b/scss/components/_results-framework.scss
@@ -62,6 +62,9 @@
 
 // component LevelTierPicker
 .leveltier-picker {
+    flex-basis: 1%;
+    flex-grow: 0;
+    flex-shrink: 1;
     margin-right: $grid-gutter-width;
     min-width: 20rem;
 }
